old-site-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: old-site
  namespace: old-site
subsets:
  - addresses:
      - ip: 192.168.122.1
    ports:
      - port: 8000
        name: http
