ingress-old-site.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: old-site-ingress
  namespace: old-site
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - old-site.boaz-study.tech
      secretName: old-site-tls
  rules:
    - host: old-site.boaz-study.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: old-site
                port:
                  number: 80
